# pytree

./: .gitignore  LICENSE.md  Pipfile  README.md  environment.yml  pyproject.toml  setup.py
src/: pytree.py
src/classes/: ProgressTracker.py  PyTree.py  __init__.py
src/pytree/: main.py  main_loc.py
src/pytree/classes/: ProgressTracker.py  PyTree.py
src/pytree/utils/: aux_funcs.py  global_vars.py
src/utils/: aux_funcs.py  global_vars.py
test_folder/folder/: a_python_file.py
