[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytree2"
version = "2.1.0"
description = "A Python implementation of the Linux 'tree' command"
authors = [{name = "Angelo Luiz Angonezi", email = "angeloangonezi2@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = "LICENSE.md"
requires-python = ">=3.8"
dependencies = ["treelib", "psutil"]

[project.scripts]
pytree = "pytree:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
