[build-system]
requires = ["setuptools>=82", "wheel>=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "pytree2"
version = "0.5.2"
description = "A Python CLI utility for visualizing folder trees with sizes and counts."
authors = [{name = "Angelo Luiz Angonezi", email = "angeloangonezi2@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
dependencies = ["treelib==1.8.0"]
keywords = ["python", "cli", "tree", "folder structure", "file size", "disk usage", "lines of code"]

[project.urls]
Homepage = "https://github.com/angelo-angonezi/pytree"
Issues = "https://github.com/angelo-angonezi/pytree/issues"

[project.scripts]
pytree = "pytree.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
